DOM Render + Generate Product List

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="main-section">
             <ul id="characters">
 
-                <button id="add-character-btn">Buy me!</button>
+                <!-- <button id="add-character-btn">Buy me!</button> -->
 
             </ul>
             
