TDD function tests

--- a/data/index.html
+++ b/data/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <header>
+        <a href="/index.html">Home</a>
+    </header>
+
     <table>
         <thead>
             <th>Product</th>
