--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        
+        <a href="/data/index.html">Shopping Cart</a>
     </header>
     <main>
         <section class="main-section">
