--- a/data/index.html
+++ b/data/index.html
@@ -32,6 +32,7 @@
         </tfoot>
 
     <button id="place-order">Place Order</button>
+    <button id='clear'>Clear All!</button>
 
     <script src="./cart.js" type="module"></script>
 </body>
