Disabled place order if cart empty + Alert place order, clear cart and redirect

--- a/data/index.html
+++ b/data/index.html
@@ -31,7 +31,7 @@
             </tr>
         </tfoot>
 
-    <button id="place-order">Place Order</button>
+    <button id="place-order" class="hidden">Place Order</button>
     <button id='clear'>Clear All!</button>
 
     <script src="./cart.js" type="module"></script>
