--- a/data/index.html
+++ b/data/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <a href="/index.html">Home</a>
+        <a href="../index.html">Home</a>
     </header>
 
     <table>
