--- a/data/index.html
+++ b/data/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="/data/cart.css">
     <title>Cart</title>
 </head>
 <body>
@@ -33,6 +33,7 @@
                 </tr>
             </tfoot>
     
+        </table>
         <button id="place-order" class="hidden">Place Order</button>
         <button id='clear'>Clear All!</button>
     </main>
