rendered admin product to main page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
     </header>
     <a href="./data">Shopping Cart</a>
+    <a href="./admin">Admin</a>
     <main>
         <section class="main-section">
 
